kubernetes/apps/capacitor/app/manifest.yaml
---
# Source: onechart/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: capacitor
  namespace: flux-system
  labels:
    helm.sh/chart: onechart-0.63.0
    app.kubernetes.io/name: onechart
    app.kubernetes.io/instance: capacitor
    app.kubernetes.io/managed-by: Helm
spec:
  type: ClusterIP
  ports:
    - port: 9000
      targetPort: 9000
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/name: onechart
    app.kubernetes.io/instance: capacitor
---
# Source: onechart/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: capacitor
  namespace: flux-system
  labels:
    helm.sh/chart: onechart-0.63.0
    app.kubernetes.io/name: onechart
    app.kubernetes.io/instance: capacitor
    app.kubernetes.io/managed-by: Helm
  annotations:
    kubectl.kubernetes.io/default-container: capacitor
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: onechart
      app.kubernetes.io/instance: capacitor
  template:
    metadata:
      annotations:
        checksum/config: e3b0c44298fc1c149afbf4c8996fb92427ae41e4649b934ca495991b7852b855
      labels:
        app.kubernetes.io/name: onechart
        app.kubernetes.io/instance: capacitor
    spec:
      containers:
        - image: ghcr.io/gimlet-io/capacitor:v0.4.2
          imagePullPolicy: IfNotPresent
          name: capacitor
          ports:
            - containerPort: 9000
              name: http
              protocol: TCP
          readinessProbe:
            failureThreshold: 3
            httpGet:
              path: /
              port: 9000
              scheme: HTTP
            initialDelaySeconds: 0
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 3
          resources:
            requests:
              cpu: 200m
              memory: 200Mi
          securityContext: {}
      initContainers: null
      securityContext:
        fsGroup: 999
      serviceAccountName: capacitor
